Add generator CLI tool

--- a/www/src/blog/2024-03-14-post-1.md
+++ b/www/src/blog/2024-03-14-post-1.md
@@ -1,6 +1,6 @@
 ---
 title: Meetings That I Will Miss
-url: /blog/post-1
+url: /blog/2024-03-14-post-1
 ---
 
 This is an article meant for testing CSS layout during development of my blog and is unrepresentative (to an extent) of how I really feel about work meetings. At least, while I'm searching for work...
